put links in config.toml

--- a/config.toml
+++ b/config.toml
@@ -4,13 +4,13 @@ title = "David C - Software Developer"
 googleAnalytics = ""
 
 [Author]
-  name = "Some Person"
+  name = "David Cisneros"
   email = "youremail@domain.com"
   facebook = "username"
-  github = ""
+  github = "davicitoafc"
   instagram = "username"
-  twitter = "username"
-  linkedin = ""
+  twitter = "daveedcis"
+  linkedin = "https://www.linkedin.com/in/davidcis/"
   stackoverflow = ""
   soundcloud = ""
   wikipedia = ""
