--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://davidcis/"
+baseurl = "davicitoafc.github.io"
 languageCode = "en-us"
 title = "David C - Software Developer"
 googleAnalytics = ""
