--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "davicitoafc.github.io"
+baseurl = "/"
 languageCode = "en-us"
 title = "David C - Software Developer"
 googleAnalytics = ""
