--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "/"
+baseurl = "http://davidcis.com/"
 languageCode = "en-us"
 title = "David C - Software Developer"
 googleAnalytics = ""
